# Stroustrup-CPP-PPP2

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  git_GUI_lib.diff  info.txt  post_build_success.cmake  site_GUI_lib.diff
chapter_10/1.drill/: info.txt
chapter_10/1.drill/1-7/: Points.cpp  Points.h  main.cpp
chapter_10/2.exercises/: info.txt
chapter_10/2.exercises/1/: main.cpp  nums.txt
chapter_10/2.exercises/11/: input.txt  main.cpp
chapter_10/2.exercises/2/: store_temps.cpp
chapter_10/2.exercises/3/: raw_temps.txt  temps_stats.cpp
chapter_10/2.exercises/4/: raw_temps.txt  temps_stats.cpp  test.txt
chapter_10/2.exercises/5/: main.cpp  ymdht.txt
chapter_10/2.exercises/6/: input.txt  main.cpp  roman_int.cpp  roman_int.h
chapter_10/2.exercises/8/: first.txt  main.cpp  second.txt
chapter_10/2.exercises/9/: first.txt  main.cpp  second.txt
chapter_11/0.try_this/: info.txt
chapter_11/0.try_this/11.2.1/: Chrono.cpp  Chrono.h  main.cpp
chapter_11/0.try_this/11.2.2/: main.cpp
chapter_11/1.drill/: info.txt
chapter_11/1.drill/1-7/: Test_output.cpp
chapter_11/1.drill/10/: main.cpp
chapter_11/1.drill/8/: main.cpp
chapter_11/1.drill/9/: main.cpp
chapter_11/2.exercises/: info.txt
chapter_11/2.exercises/10/: main.cpp
chapter_11/2.exercises/11/: main.cpp
chapter_11/2.exercises/12/: main.cpp
chapter_11/2.exercises/13/: input.txt  main.cpp
chapter_11/2.exercises/14/: input.txt  input3.txt  main.cpp
chapter_11/2.exercises/15/: input.txt  main.cpp
chapter_11/2.exercises/16/: input.txt  main.cpp
chapter_11/2.exercises/1_wchar_wfs/: input.txt  main.cpp
chapter_11/2.exercises/2/: input.txt  main.cpp
chapter_11/2.exercises/3/: main.cpp
chapter_11/2.exercises/4/: multi_input.cpp
chapter_11/2.exercises/5/: main.cpp
chapter_11/2.exercises/5_simple/: main.cpp
chapter_11/2.exercises/6/: main.cpp
chapter_11/2.exercises/7/: main.cpp
chapter_11/2.exercises/8/: input.txt  input2.txt  main.cpp
chapter_11/2.exercises/9/: input.txt
chapter_12_GUI/1.drill/: info.txt  main.cpp
chapter_12_GUI/2.exercises/: info.txt
chapter_12_GUI/2.exercises/1/: main.cpp
chapter_12_GUI/2.exercises/10/: main.cpp
chapter_12_GUI/2.exercises/11/: main.cpp
chapter_12_GUI/2.exercises/11_alternative/: main.cpp
chapter_12_GUI/2.exercises/12-13/: lame.cpp
chapter_12_GUI/2.exercises/2/: main.cpp
chapter_12_GUI/2.exercises/3/: main.cpp
chapter_12_GUI/2.exercises/4/: main.cpp
chapter_12_GUI/2.exercises/5/: main.cpp
chapter_12_GUI/2.exercises/6/: main.cpp
chapter_12_GUI/2.exercises/7/: simple_house.cpp
chapter_12_GUI/2.exercises/8/: olympic.cpp
chapter_12_GUI/2.exercises/9/: photo.cpp
chapter_13_GUI/1.drill/: info.txt  main.cpp
chapter_13_GUI/2.exercises/: info.txt
chapter_13_GUI/2.exercises/1/: main.cpp
chapter_13_GUI/2.exercises/11/: main.cpp
chapter_13_GUI/2.exercises/12/: main.cpp
chapter_13_GUI/2.exercises/13/: main.cpp
chapter_13_GUI/2.exercises/14/: main.cpp
chapter_13_GUI/2.exercises/15/: main.cpp
chapter_13_GUI/2.exercises/16/: main.cpp
chapter_13_GUI/2.exercises/17/: main.cpp
chapter_13_GUI/2.exercises/18/: main.cpp
chapter_13_GUI/2.exercises/19/: main.cpp
chapter_13_GUI/2.exercises/2/: main.cpp
chapter_13_GUI/2.exercises/3/: main.cpp
chapter_13_GUI/2.exercises/4/: main.cpp
chapter_13_GUI/2.exercises/5/: main.cpp
chapter_13_GUI/2.exercises/6/: main.cpp
chapter_13_GUI/2.exercises/7/: main.cpp  method.docx
chapter_13_GUI/2.exercises/8n10/: main.cpp
chapter_13_GUI/2.exercises/9/: main.cpp
chapter_14_GUI/1.drill/: info.txt  main.cpp
chapter_14_GUI/2.exercises/: info.txt
chapter_14_GUI/2.exercises/1/: main.cpp
chapter_14_GUI/2.exercises/10/: main.cpp
chapter_14_GUI/2.exercises/11-13_v1/: addition_intermediate_version.cpp  addition_intermediate_version.h  main.cpp
chapter_14_GUI/2.exercises/11-13_v2/: addition_intermediate_version.cpp  addition_intermediate_version.h  main.cpp
chapter_14_GUI/2.exercises/11-14/: main.cpp
chapter_14_GUI/2.exercises/15/: main.cpp
chapter_14_GUI/2.exercises/16/: main.cpp
chapter_14_GUI/2.exercises/17/: main.cpp
chapter_14_GUI/2.exercises/2-3/: main.cpp
chapter_14_GUI/2.exercises/4/: main.cpp
chapter_14_GUI/2.exercises/5/: main.cpp
chapter_14_GUI/2.exercises/6/: main.cpp
chapter_14_GUI/2.exercises/7/: main.cpp
chapter_15_GUI/1.drill/: info.txt
chapter_15_GUI/2.exercises/: info.txt
chapter_16_GUI/1.drill/: Lines_window.h  info.txt  main.cpp
chapter_16_GUI/2.exercises/: info.txt
chapter_17/1.drill/: info.txt
chapter_17/1.drill/1/: main.cpp
chapter_17/2.exercises/: info.txt
chapter_18/0.try_this/: info.txt
chapter_18/1.drill/: info.txt
chapter_18/2.exercises/: info.txt
chapter_19_1GUI/1.drill/: info.txt
chapter_19_1GUI/2.exercises/: info.txt
chapter_2/: HelloWorld.cpp  info.txt
chapter_20/0.try_this/: info.txt
chapter_20/1.drill/: info.txt  main.cpp
chapter_20/2.exercises/: info.txt
chapter_21_2GUI/0.try_this/: info.txt
chapter_21_2GUI/1.drill/: info.txt
chapter_21_2GUI/2.exercises/: info.txt
chapter_23/0.try_this/: info.txt
chapter_23/1.drill/: info.txt
chapter_23/2.exercises/: info.txt
chapter_24/1.drill/: info.txt
chapter_24/2.exercises/: info.txt
chapter_25/0.try_this/: info.txt
chapter_25/1.drill/: info.txt  main.cpp
chapter_25/2.exercises/: info.txt
chapter_26/1.drill/: info.txt
chapter_3/0.try_this/: info.txt
chapter_3/1.drill/: drill.cpp  info.txt
chapter_3/2.exercises/: info.txt
chapter_4/0.try_this/: info.txt
chapter_4/1.drill/: info.txt
chapter_4/2.exercises/: info.txt
chapter_5/0.try_this/: info.txt
chapter_5/1.drill/: info.txt  main.cpp
chapter_5/2.exercises/: info.txt
chapter_6/0.try_this/: info.txt
chapter_6/1.drill/: info.txt
chapter_6/2.exercises/: info.txt
chapter_7/0.try_this/: info.txt
chapter_7/1.drill/: info.txt
chapter_7/2.exercises/: info.txt
chapter_8/1.drill/: info.txt
chapter_8/2.exercises/: info.txt
chapter_9/1.drill/: info.txt
chapter_9/2.exercises/: info.txt
include/: addition.cpp  addition.h  console_encoding.h  yes_or_no.h
(+490 files in other folders)
